Fix footer issue on mobile

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -655,6 +655,10 @@ code {
     display: block !important;
     margin-top: 2rem;
   }
+
+  .desktop-only {
+    display: none !important;
+  }
 }
 
 
